--- a/html/media.html
+++ b/html/media.html
@@ -34,6 +34,11 @@
 				<div class="col-4 col-m-4" id="mediaToggle">All</div>
 				<div class="col-4 col-m-4" id="videoToggle">Video</div>
 				<div class="col-4 col-m-4" id="photoToggle">Photo</div>
+
+				<!-- <div class="col-3 col-m-3" id="mediaToggle">All</div>
+				<div class="col-3 col-m-3" id="videoToggle">Video</div>
+				<div class="col-3 col-m-3" id="photoToggle">Photo</div>
+				<div class="col-3 col-m-3" id="audioToggle">Music</div> -->
 			</div>
 		</div>
 		<div class="row videos">
@@ -60,6 +65,13 @@
 				</div>
 			</div>
 		</div>
+		<!-- <div class="row audio">
+			<div class="col-12 audioRow">
+				<div class="col-6 col-m-6">
+					<iframe width="100%" height="450" class="track" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/302537896&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+				</div>
+			</div>
+		</div> -->
 		<div class="row photos">
 			<!-- ONE -->
 			<div class="col-12 photoRow">
@@ -95,22 +107,56 @@
 					<img class="photo" onclick="displayViewer(5)" src='https://lh3.googleusercontent.com/nTzfoKoDSf93djPnfqZV_nJIV-aFr1CBAdU--33dUeULEtHHZlPf_okeu-FVrxsV-4p1U1i50ynGH4ta79g7NaPwSgX8BCnyr9uThVRNxwefmnxgtC6gLjWllkQ1FCN1JT53-w' />
 				</div>
 			</div>
-			<!-- THREE -->
 			<div class="col-12 photoRow">
-				<!-- 1 -->
+				<!--  -->
 				<div class="col-4 col-m-4">
-					<!-- West Cliff Rocks B&W -->
-					<img class="photo" onclick="displayViewer(6)" src='https://lh3.googleusercontent.com/_D56qSdDY0wCd4m6Vmd68TeEwvhPVfsGyGj_4cZx0nLbu3Yloxh_hDNjFTtbmUtMwzBK5P5TnFJzPm4MeQQ63y6KuX9EO2oqdN-8gUKwS6EDvay5WB66jGRVDPT9N9_csscLdA' />
+					<!--  -->
+					<img class="photo" onclick="displayViewer(6)" src='https://lh3.googleusercontent.com/mFgi3D45Lv_5JrotUFsm4SH82dBABfk-fo2aRxn-4SdFbdAsMH0yg8c_P0lsdscoTC9PiE0FwdMLAk_6Z4M3sHb2zlgldi5d7L3LFz8q9BLuuZ8brnXjJvgMfi9nHbIicTDTaA' />
 				</div>
-				<!-- 2 -->
+				<!--  -->
 				<div class="col-4 col-m-4">
-					<!-- West Cliff B&W -->
-					<img class="photo" onclick="displayViewer(7)" src='https://lh3.googleusercontent.com/Iw-BcIjbfbE50GYne0Zs8QllunqLD6aLs6PSJVzdvRdQKTv1yjtC6ifMRtFXyIiFXYZ9ULW4umJu0dn4yYOchKtaD1h3WzRfz6sUIadBEhOlhv6jcWXRrUPdHLBILPi77x2yUQ' />
+					<!--  -->
+					<img class="photo" onclick="displayViewer(7)" src='https://lh3.googleusercontent.com/LfyO2I5ufc_H59F6fon09MOliV-rNFeAtKtjAysPYrYIwgdmfQ-xuEq72VR_LyhmRt_6N2k5lM9ch5noBHUSdktZYtoddBSO8-RP9-wi-yfXO26si8W4mzJ5QsLpsgLBNxthig' />
 				</div>
-				<!-- 3 -->
+				<!--  -->
 				<div class="col-4 col-m-4">
-					<!-- Santa Cruz Boardwalk Round-about -->
-					<img class="photo" onclick="displayViewer(8)" src='https://lh3.googleusercontent.com/ZdRbSXN0Jp9h3NWJqMmUbebal4JD-bsRy-Xnn7X6_szYTmpA18NVMPj-nnGxRVuURvOM9kA8TCSkSVXnh4mgOKi3XHCGXB7EfwuNFHvQvDWjK493RlYIqzSM2AHZf-Vv25TQiQ' />
+					<!--  -->
+					<img class="photo" onclick="displayViewer(8)" src='https://lh3.googleusercontent.com/y8HZK39-paO4wwXswUZJ6RJywR5aIVf_6ecEuqLyx3kTxAaU39K_zkFw0bM5-jRoEeHu3XW6jwWRim6L0ACtHKk5SssO_J9hAEM9YV0_JHy4k3qf1xQ_5jdL62HXzYmp2NuIkg' />
+				</div>
+			</div>
+			<div class="col-12 photoRow">
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(9)" src='https://lh3.googleusercontent.com/9UchZS6ON047ZhRm3V-LEe1PJQ7uiLk5Mliznb_VCmYK451zcrGa8Q5m0PpPRoCfLZFQSlw_dZH4g9f7c6AaljKk_jfjvPhA5UJXsrcStRNmsIqZFi0h2OXFiLRQdKtkTDSuyQ' />
+				</div>
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(10)" src='https://lh3.googleusercontent.com/ZC8XIoKh206t06n7PjIPAuNA5NReu8kvZGRnnAiVion7amJFi1vc_iEaq81OuVJabClWNN3NeAyDyaWyv9vS1VfffMv-Gb0OV07Lxia-oJ5_LeONou3D0kMQXiQE-0yOCZCmIg' />
+				</div>
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(11)" src='https://lh3.googleusercontent.com/Gb74cTCyxgkjlCmHiN9NEgDWFhDK2gIlgo-QR0Ec_4zC9fVIXuwwdxfWPnRHlgIQHTdTNsykxzQEbP8ca0EvWG9qYApDBHioVKTgISWGxi_8_HN--aVStRqdvAo14nXLIa5ZxA' />
+				</div>
+			</div>
+			<!--  -->
+			<div class="col-12 photoRow">
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(12)" src='https://lh3.googleusercontent.com/_D56qSdDY0wCd4m6Vmd68TeEwvhPVfsGyGj_4cZx0nLbu3Yloxh_hDNjFTtbmUtMwzBK5P5TnFJzPm4MeQQ63y6KuX9EO2oqdN-8gUKwS6EDvay5WB66jGRVDPT9N9_csscLdA' />
+				</div>
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(13)" src='https://lh3.googleusercontent.com/Iw-BcIjbfbE50GYne0Zs8QllunqLD6aLs6PSJVzdvRdQKTv1yjtC6ifMRtFXyIiFXYZ9ULW4umJu0dn4yYOchKtaD1h3WzRfz6sUIadBEhOlhv6jcWXRrUPdHLBILPi77x2yUQ' />
+				</div>
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(14)" src='https://lh3.googleusercontent.com/ZdRbSXN0Jp9h3NWJqMmUbebal4JD-bsRy-Xnn7X6_szYTmpA18NVMPj-nnGxRVuURvOM9kA8TCSkSVXnh4mgOKi3XHCGXB7EfwuNFHvQvDWjK493RlYIqzSM2AHZf-Vv25TQiQ' />
 				</div>
 			</div>
 			<!-- FOUR -->
@@ -118,17 +164,17 @@
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
 					<!-- Lighthouse Dog Beach -->
-					<img class="photo" onclick="displayViewer(9)" src='https://lh3.googleusercontent.com/s97NM7Fp0Ic0Mf9I-f8mhGRWn3wZsMggi0IZMTHCxLymhPg1KMLT6Plzun_8-IaoLzhyFRd6dggMCaG5z1G5_VEQMl_VMi24deChg9WWnT4n9F4BNH6TwgAIRoXcJz3_-_ZVVA' />
+					<img class="photo" onclick="displayViewer(15)" src='https://lh3.googleusercontent.com/s97NM7Fp0Ic0Mf9I-f8mhGRWn3wZsMggi0IZMTHCxLymhPg1KMLT6Plzun_8-IaoLzhyFRd6dggMCaG5z1G5_VEQMl_VMi24deChg9WWnT4n9F4BNH6TwgAIRoXcJz3_-_ZVVA' />
 				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
 					<!-- Dog Beach -->
-					<img class="photo" onclick="displayViewer(10)" src='https://lh3.googleusercontent.com/IrbUCtDTin5oQGP2cIBkBiJABv7tNBxQjHOmtq9cA1iPjqTacJSYb5VoBfLgPixR-NQnDpUSzoj-AIqU8bBrNCOjkW46KbGGiJy48pDbmmLpy-dNUZqAPBx-TGaesySxh0CUaA' />
+					<img class="photo" onclick="displayViewer(16)" src='https://lh3.googleusercontent.com/IrbUCtDTin5oQGP2cIBkBiJABv7tNBxQjHOmtq9cA1iPjqTacJSYb5VoBfLgPixR-NQnDpUSzoj-AIqU8bBrNCOjkW46KbGGiJy48pDbmmLpy-dNUZqAPBx-TGaesySxh0CUaA' />
 				</div>
 				<!-- 3 -->
 				<div class="col-4 col-m-4">
 					<!-- Berkeley Golden Gate Sunset -->
-					<img class="photo" onclick="displayViewer(11)" src='https://lh3.googleusercontent.com/R6WoeUMSxntgRpiVT0LuOqXFJLHPXHutaOErEuFQYkJD7Cvjw-On-mOhZMK-gciRsEAixH7jR-gq6e1kT9xAMDM7zEa3vzYDHtYavumKXIjsweS2IOmcRiwCQF9n090CFd5fWw' />
+					<img class="photo" onclick="displayViewer(17)" src='https://lh3.googleusercontent.com/R6WoeUMSxntgRpiVT0LuOqXFJLHPXHutaOErEuFQYkJD7Cvjw-On-mOhZMK-gciRsEAixH7jR-gq6e1kT9xAMDM7zEa3vzYDHtYavumKXIjsweS2IOmcRiwCQF9n090CFd5fWw' />
 				</div>
 			</div>
 			<!-- FIVE -->
@@ -136,17 +182,17 @@
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Rock Splash Sunset -->
-					<img class="photo" onclick="displayViewer(12)" src='https://lh3.googleusercontent.com/lo0afVEMPm14LlW1_MX5cn0J1fzw8Ie47hnmesQq0mFGivtET2P5tfDJ6bGgSTXm_mRA2uZa3btidqR71uaBJSkDGro-gInHmqaG9P71KT0R0ChfUy9y9Tkc6q8vSlIR39KDFQ' />
+					<img class="photo" onclick="displayViewer(18)" src='https://lh3.googleusercontent.com/lo0afVEMPm14LlW1_MX5cn0J1fzw8Ie47hnmesQq0mFGivtET2P5tfDJ6bGgSTXm_mRA2uZa3btidqR71uaBJSkDGro-gInHmqaG9P71KT0R0ChfUy9y9Tkc6q8vSlIR39KDFQ' />
 				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Sunset -->
-					<img class="photo" onclick="displayViewer(13)" src='https://lh3.googleusercontent.com/SWcR3NDcYY22I0sbRbLrxIgjcVa_ICddFpEbr7ya5smzaq14VKU3d14uDINW53jYhDepdxNL48yEV7tW2WG8z1mCkUKAxQHDOWsGLzICkBCM3VwILFRGaASy3FlYOwsvG9nBoA' />
+					<img class="photo" onclick="displayViewer(19)" src='https://lh3.googleusercontent.com/SWcR3NDcYY22I0sbRbLrxIgjcVa_ICddFpEbr7ya5smzaq14VKU3d14uDINW53jYhDepdxNL48yEV7tW2WG8z1mCkUKAxQHDOWsGLzICkBCM3VwILFRGaASy3FlYOwsvG9nBoA' />
 				</div>
 				<!-- 3 -->
 				<div class="col-4 col-m-4">
 					<!-- Natural Bridges Sunset -->
-					<img class="photo" onclick="displayViewer(14)" src='https://lh3.googleusercontent.com/T4nTzJvGKnZwRLiOPcDO4-Qjff82vI5jwPqTY5_FYB8uS5Cfk_1dzpeh-XhzuQksyKj8JDZ9RqoNXVZZobUaj8trOAV4wwqmHI0TFpcZcFi8yT-RJND5Hrhb419PNO2EoT8lFA' />
+					<img class="photo" onclick="displayViewer(20)" src='https://lh3.googleusercontent.com/T4nTzJvGKnZwRLiOPcDO4-Qjff82vI5jwPqTY5_FYB8uS5Cfk_1dzpeh-XhzuQksyKj8JDZ9RqoNXVZZobUaj8trOAV4wwqmHI0TFpcZcFi8yT-RJND5Hrhb419PNO2EoT8lFA' />
 				</div>
 			</div>
 			<!-- SIX -->
@@ -154,17 +200,17 @@
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Rocks #1 -->
-					<img class="photo" onclick="displayViewer(15)" src='https://lh3.googleusercontent.com/MUyi7niAcvwBxQCekqo4EYyTqGOKSBaPMZ62H-JDc_mBUj-K59HNIImEeRJawHK3uHM6r5ZCTaSBo5MY5uv6Pm6lVjqFyAynPjNvhDhJOrA8B7Ey_HBYNMgHnjlZbiITtGEc2g' />
+					<img class="photo" onclick="displayViewer(21)" src='https://lh3.googleusercontent.com/MUyi7niAcvwBxQCekqo4EYyTqGOKSBaPMZ62H-JDc_mBUj-K59HNIImEeRJawHK3uHM6r5ZCTaSBo5MY5uv6Pm6lVjqFyAynPjNvhDhJOrA8B7Ey_HBYNMgHnjlZbiITtGEc2g' />
 				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Rocks #2 -->
-					<img class="photo" onclick="displayViewer(16)" src='https://lh3.googleusercontent.com/ngcWsjiB2H1rVvkav89W8qgZVMGZK8Jl1aFqN74KaXPiBafryrRL0f5uRCIH3Cg-2q7ha-H_Sg8DlamLxfISXVTB-X5FMiKka1nCGolQnfmxxQyF4lpmbgT-N4HcQXY1aJ2QIQ' />
+					<img class="photo" onclick="displayViewer(22)" src='https://lh3.googleusercontent.com/ngcWsjiB2H1rVvkav89W8qgZVMGZK8Jl1aFqN74KaXPiBafryrRL0f5uRCIH3Cg-2q7ha-H_Sg8DlamLxfISXVTB-X5FMiKka1nCGolQnfmxxQyF4lpmbgT-N4HcQXY1aJ2QIQ' />
 				</div>
 				<!-- 3 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Rocks #3 -->
-					<img class="photo" onclick="displayViewer(17)" src='https://lh3.googleusercontent.com/ZSy_t4g8sF8OKS88mU2FOhe_T7a6dcEBplRfFBeKeVMmi360fpFLi-73cdo2PXNndXLnLc8H5RmlLuPy7i_iXwyuJ7vUvd-ojGcUb-uUj_J0opRcX0bGOLZg16WVi5Wq3Eivfw' />
+					<img class="photo" onclick="displayViewer(23)" src='https://lh3.googleusercontent.com/ZSy_t4g8sF8OKS88mU2FOhe_T7a6dcEBplRfFBeKeVMmi360fpFLi-73cdo2PXNndXLnLc8H5RmlLuPy7i_iXwyuJ7vUvd-ojGcUb-uUj_J0opRcX0bGOLZg16WVi5Wq3Eivfw' />
 				</div>
 			</div>
 			<!-- SEVEN -->
@@ -172,7 +218,7 @@
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Rocks #4 -->
-					<img class="photo" onclick="displayViewer(18)" src='https://lh3.googleusercontent.com/hsD_0mfFfedquRoH_iRMQDp2H-kzeP2F6e9JM6Mg_NxYNFjWqBdvqQev6zXuml_PevZ1AMIKjl2_NuKACoYPeQvto3J2ssQiZz5gYlVcMV1ujEpzF-WGMGp11dwBy8W2m7HDEw' />
+					<img class="photo" onclick="displayViewer(24)" src='https://lh3.googleusercontent.com/hsD_0mfFfedquRoH_iRMQDp2H-kzeP2F6e9JM6Mg_NxYNFjWqBdvqQev6zXuml_PevZ1AMIKjl2_NuKACoYPeQvto3J2ssQiZz5gYlVcMV1ujEpzF-WGMGp11dwBy8W2m7HDEw' />
 				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
@@ -190,29 +236,55 @@
 					<button class="next navButton">></button>
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Lighthouse Sunset -->
+					<!-- 0 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/pUx9vaXguaY-7_m31Syqhbo5IC5Rk32mV3TROKrtggr52z8a153SOjpObfz0ZiC6IbP1QtPFsKGoXCzl_nb6c7WLVgRhtWcYl26lhz_yodH3wk7795YkOm24WjzYq7aDZafd' />
 				</div>
 				<div class="photoSlide">
-					<!-- Oakland Houses -->
+					<!-- 1 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/cICoCQoia-IGJH-CfrZY1o7nWkMRsoR3_awOK9AeTZ8-TkkGaJDawIr4zo8Q4qy0TOEnQnhGlbgTJQguFV0unfgpLurvjgMVyS8AG7auXXqXxUVcRN5pbpQcPESnvGlXZT2-5w' />
 				</div>
 				<div class="photoSlide">
-					<!-- Ocean Waves Top -->
+					<!-- 2 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/4O5brjcVzits5ejFQV93Keik1CWkRwdacTiSf0W6Ifl096OdD7ZZs3RFV3EtHmkbdDDOm_kKSZZ4hFOv493bKo7W6sRYveHgL7n8ScfRTvLo1aiqsWEDiMrMmVtCfqkV9IhbJA' />
 				</div>
 				<div class="photoSlide">
-					<!-- UCSC Forest Bridge -->
+					<!-- 3 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/wPD78jhSix0hNmyMi3oadvTqnaNNrVxjYDyoZqDaRNVkmkQCty_8lo4cWdiHi0Y1DO3RIvMWUt4V_ccPPEVwiYriBGiza8oBkngCpqa8qq1vwUXKBkDHSRSyFaBsmQAtPT5tgQ' />
 				</div>
 				<div class="photoSlide">
+					<!-- 4 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/yp2vWdHFscaCHj1OpkzPL6Q4pSSYXg9GM2eITz5FkXphWpRLrwJ_8XCBu_LrD1jFlIPu-mxwRmd3SmST73GB7C97Tr1s-mM3s9gR6HDRp232jTIdC0DOoDKRx0-iiIjY6cQkhw' />
 				</div>
 				<div class="photoSlide">
+					<!-- 5 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/nTzfoKoDSf93djPnfqZV_nJIV-aFr1CBAdU--33dUeULEtHHZlPf_okeu-FVrxsV-4p1U1i50ynGH4ta79g7NaPwSgX8BCnyr9uThVRNxwefmnxgtC6gLjWllkQ1FCN1JT53-w' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Rocks B&W -->
+					<!-- 6 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/mFgi3D45Lv_5JrotUFsm4SH82dBABfk-fo2aRxn-4SdFbdAsMH0yg8c_P0lsdscoTC9PiE0FwdMLAk_6Z4M3sHb2zlgldi5d7L3LFz8q9BLuuZ8brnXjJvgMfi9nHbIicTDTaA' />
+				</div>
+				<div class="photoSlide">
+					<!-- 7 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/LfyO2I5ufc_H59F6fon09MOliV-rNFeAtKtjAysPYrYIwgdmfQ-xuEq72VR_LyhmRt_6N2k5lM9ch5noBHUSdktZYtoddBSO8-RP9-wi-yfXO26si8W4mzJ5QsLpsgLBNxthig' />
+				</div>
+				<div class="photoSlide">
+					<!-- 8 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/y8HZK39-paO4wwXswUZJ6RJywR5aIVf_6ecEuqLyx3kTxAaU39K_zkFw0bM5-jRoEeHu3XW6jwWRim6L0ACtHKk5SssO_J9hAEM9YV0_JHy4k3qf1xQ_5jdL62HXzYmp2NuIkg' />
+				</div>
+				<div class="photoSlide">
+					<!-- 9 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/9UchZS6ON047ZhRm3V-LEe1PJQ7uiLk5Mliznb_VCmYK451zcrGa8Q5m0PpPRoCfLZFQSlw_dZH4g9f7c6AaljKk_jfjvPhA5UJXsrcStRNmsIqZFi0h2OXFiLRQdKtkTDSuyQ' />
+				</div>
+				<div class="photoSlide">
+					<!-- 10 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/ZC8XIoKh206t06n7PjIPAuNA5NReu8kvZGRnnAiVion7amJFi1vc_iEaq81OuVJabClWNN3NeAyDyaWyv9vS1VfffMv-Gb0OV07Lxia-oJ5_LeONou3D0kMQXiQE-0yOCZCmIg' />
+				</div>
+				<div class="photoSlide">
+					<!-- 11 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/Gb74cTCyxgkjlCmHiN9NEgDWFhDK2gIlgo-QR0Ec_4zC9fVIXuwwdxfWPnRHlgIQHTdTNsykxzQEbP8ca0EvWG9qYApDBHioVKTgISWGxi_8_HN--aVStRqdvAo14nXLIa5ZxA' />
+				</div>
+				<div class="photoSlide">
+					<!-- 9 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/_D56qSdDY0wCd4m6Vmd68TeEwvhPVfsGyGj_4cZx0nLbu3Yloxh_hDNjFTtbmUtMwzBK5P5TnFJzPm4MeQQ63y6KuX9EO2oqdN-8gUKwS6EDvay5WB66jGRVDPT9N9_csscLdA' />
 				</div>
 				<div class="photoSlide">
@@ -225,7 +297,7 @@
 				</div>	
 				<div class="photoSlide">
 					<!-- Lighthouse Dog Beach -->
-					<img class="photo" src='https://lh3.googleusercontent.com/s97NM7Fp0Ic0Mf9I-f8mhGRWn3wZsMggi0IZMTHCxLymhPg1KMLT6Plzun_8-IaoLzhyFRd6dggMCaG5z1G5_VEQMl_VMi24deChg9WWnT4n9F4BNH6TwgAIRoXcJz3_-_ZVVA' />
+					<img class="photo" src='https://lh3.googleusercontent.com/Gb74cTCyxgkjlCmHiN9NEgDWFhDK2gIlgo-QR0Ec_4zC9fVIXuwwdxfWPnRHlgIQHTdTNsykxzQEbP8ca0EvWG9qYApDBHioVKTgISWGxi_8_HN--aVStRqdvAo14nXLIa5ZxA' />
 				</div>
 				<div class="photoSlide">
 					<!-- Dog Beach -->
