--- a/html/media.html
+++ b/html/media.html
@@ -124,6 +124,7 @@
 					<img class="photo" onclick="displayViewer(8)" src='https://lh3.googleusercontent.com/y8HZK39-paO4wwXswUZJ6RJywR5aIVf_6ecEuqLyx3kTxAaU39K_zkFw0bM5-jRoEeHu3XW6jwWRim6L0ACtHKk5SssO_J9hAEM9YV0_JHy4k3qf1xQ_5jdL62HXzYmp2NuIkg' />
 				</div>
 			</div>
+
 			<div class="col-12 photoRow">
 				<!--  -->
 				<div class="col-4 col-m-4">
@@ -220,6 +221,23 @@
 					<!-- West Cliff Rocks #4 -->
 					<img class="photo" onclick="displayViewer(24)" src='https://lh3.googleusercontent.com/hsD_0mfFfedquRoH_iRMQDp2H-kzeP2F6e9JM6Mg_NxYNFjWqBdvqQev6zXuml_PevZ1AMIKjl2_NuKACoYPeQvto3J2ssQiZz5gYlVcMV1ujEpzF-WGMGp11dwBy8W2m7HDEw' />
 				</div>
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(25)" src='https://lh3.googleusercontent.com/Rp0ubEE5MPL_2_hqjsnSCJWDXZZSNBMfi5qz6I6y4HZFImVdXaTzJO8D-nKifRqI8UzA42PWzAxDp-SMticwytdGj2I9yJTBDxexfxWsYSlegZyJ-5wHrghRlitfi1M3NKho7A' />
+				</div>
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(26)" src='https://lh3.googleusercontent.com/NprE44ZMNWYllaoxhRqMoQA_oNltw0A7zBshzf29R5iT6zUdCAzUcpd_6kWC36zE3JfUpY0s9cjH_kg7hskZ2LV1Dku3dZyk1sdFyBJwUfMkIGnTy2Gf_nIXEl9mi-dK3PBxwg' />
+				</div>
+			</div>
+			<div class="col-12 photoRow">
+				<!--  -->
+				<div class="col-4 col-m-4">
+					<!--  -->
+					<img class="photo" onclick="displayViewer(27)" src='https://lh3.googleusercontent.com/_XolYhdoPEWp8eR_kEwKs4ERjdF8wmCs_XMxj5V55vjAvXiDJXYSsHIYwGuGXeRcfudeHVGlgx56YlDo8KwJUXhMiCI0awHE26iMLlvDM9pPytzaDR4D9Ptgqw5xBkDIEGe7_w' />
+				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
 				</div>
@@ -284,56 +302,68 @@
 					<img class="photo" src='https://lh3.googleusercontent.com/Gb74cTCyxgkjlCmHiN9NEgDWFhDK2gIlgo-QR0Ec_4zC9fVIXuwwdxfWPnRHlgIQHTdTNsykxzQEbP8ca0EvWG9qYApDBHioVKTgISWGxi_8_HN--aVStRqdvAo14nXLIa5ZxA' />
 				</div>
 				<div class="photoSlide">
-					<!-- 9 -->
+					<!-- 12 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/_D56qSdDY0wCd4m6Vmd68TeEwvhPVfsGyGj_4cZx0nLbu3Yloxh_hDNjFTtbmUtMwzBK5P5TnFJzPm4MeQQ63y6KuX9EO2oqdN-8gUKwS6EDvay5WB66jGRVDPT9N9_csscLdA' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff B&W -->
+					<!-- 13 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/Iw-BcIjbfbE50GYne0Zs8QllunqLD6aLs6PSJVzdvRdQKTv1yjtC6ifMRtFXyIiFXYZ9ULW4umJu0dn4yYOchKtaD1h3WzRfz6sUIadBEhOlhv6jcWXRrUPdHLBILPi77x2yUQ' />
 				</div>
 				<div class="photoSlide">
-					<!-- Santa Cruz Boardwalk Round-about -->
+					<!-- 14 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/ZdRbSXN0Jp9h3NWJqMmUbebal4JD-bsRy-Xnn7X6_szYTmpA18NVMPj-nnGxRVuURvOM9kA8TCSkSVXnh4mgOKi3XHCGXB7EfwuNFHvQvDWjK493RlYIqzSM2AHZf-Vv25TQiQ' />
-				</div>	
-				<div class="photoSlide">
-					<!-- Lighthouse Dog Beach -->
-					<img class="photo" src='https://lh3.googleusercontent.com/Gb74cTCyxgkjlCmHiN9NEgDWFhDK2gIlgo-QR0Ec_4zC9fVIXuwwdxfWPnRHlgIQHTdTNsykxzQEbP8ca0EvWG9qYApDBHioVKTgISWGxi_8_HN--aVStRqdvAo14nXLIa5ZxA' />
 				</div>
 				<div class="photoSlide">
-					<!-- Dog Beach -->
+					<!-- 15 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/s97NM7Fp0Ic0Mf9I-f8mhGRWn3wZsMggi0IZMTHCxLymhPg1KMLT6Plzun_8-IaoLzhyFRd6dggMCaG5z1G5_VEQMl_VMi24deChg9WWnT4n9F4BNH6TwgAIRoXcJz3_-_ZVVA' />
+				</div>
+				<div class="photoSlide">
+					<!-- 16 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/IrbUCtDTin5oQGP2cIBkBiJABv7tNBxQjHOmtq9cA1iPjqTacJSYb5VoBfLgPixR-NQnDpUSzoj-AIqU8bBrNCOjkW46KbGGiJy48pDbmmLpy-dNUZqAPBx-TGaesySxh0CUaA' />
 				</div>
 				<div class="photoSlide">
-					<!-- Berkeley Golden Gate Sunset -->
+					<!-- 17 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/R6WoeUMSxntgRpiVT0LuOqXFJLHPXHutaOErEuFQYkJD7Cvjw-On-mOhZMK-gciRsEAixH7jR-gq6e1kT9xAMDM7zEa3vzYDHtYavumKXIjsweS2IOmcRiwCQF9n090CFd5fWw' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Rock Splash Sunset -->
+					<!-- 18 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/lo0afVEMPm14LlW1_MX5cn0J1fzw8Ie47hnmesQq0mFGivtET2P5tfDJ6bGgSTXm_mRA2uZa3btidqR71uaBJSkDGro-gInHmqaG9P71KT0R0ChfUy9y9Tkc6q8vSlIR39KDFQ' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Sunset -->
+					<!-- 19 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/SWcR3NDcYY22I0sbRbLrxIgjcVa_ICddFpEbr7ya5smzaq14VKU3d14uDINW53jYhDepdxNL48yEV7tW2WG8z1mCkUKAxQHDOWsGLzICkBCM3VwILFRGaASy3FlYOwsvG9nBoA' />
 				</div>
 				<div class="photoSlide">
-					<!-- Natural Bridges Sunset -->
+					<!-- 20 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/T4nTzJvGKnZwRLiOPcDO4-Qjff82vI5jwPqTY5_FYB8uS5Cfk_1dzpeh-XhzuQksyKj8JDZ9RqoNXVZZobUaj8trOAV4wwqmHI0TFpcZcFi8yT-RJND5Hrhb419PNO2EoT8lFA' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Rocks #1 -->
+					<!-- 21 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/MUyi7niAcvwBxQCekqo4EYyTqGOKSBaPMZ62H-JDc_mBUj-K59HNIImEeRJawHK3uHM6r5ZCTaSBo5MY5uv6Pm6lVjqFyAynPjNvhDhJOrA8B7Ey_HBYNMgHnjlZbiITtGEc2g' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Rocks #2 -->
+					<!-- 22 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/ngcWsjiB2H1rVvkav89W8qgZVMGZK8Jl1aFqN74KaXPiBafryrRL0f5uRCIH3Cg-2q7ha-H_Sg8DlamLxfISXVTB-X5FMiKka1nCGolQnfmxxQyF4lpmbgT-N4HcQXY1aJ2QIQ' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Rocks #3 -->
+					<!-- 23 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/ZSy_t4g8sF8OKS88mU2FOhe_T7a6dcEBplRfFBeKeVMmi360fpFLi-73cdo2PXNndXLnLc8H5RmlLuPy7i_iXwyuJ7vUvd-ojGcUb-uUj_J0opRcX0bGOLZg16WVi5Wq3Eivfw' />
 				</div>
 				<div class="photoSlide">
-					<!-- West Cliff Rocks #4 -->
+					<!-- 24 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/hsD_0mfFfedquRoH_iRMQDp2H-kzeP2F6e9JM6Mg_NxYNFjWqBdvqQev6zXuml_PevZ1AMIKjl2_NuKACoYPeQvto3J2ssQiZz5gYlVcMV1ujEpzF-WGMGp11dwBy8W2m7HDEw' />
+				</div>
+				<div class="photoSlide">
+					<!-- 25 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/Rp0ubEE5MPL_2_hqjsnSCJWDXZZSNBMfi5qz6I6y4HZFImVdXaTzJO8D-nKifRqI8UzA42PWzAxDp-SMticwytdGj2I9yJTBDxexfxWsYSlegZyJ-5wHrghRlitfi1M3NKho7A' />
+				</div>
+				<div class="photoSlide">
+					<!-- 26 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/NprE44ZMNWYllaoxhRqMoQA_oNltw0A7zBshzf29R5iT6zUdCAzUcpd_6kWC36zE3JfUpY0s9cjH_kg7hskZ2LV1Dku3dZyk1sdFyBJwUfMkIGnTy2Gf_nIXEl9mi-dK3PBxwg' />
+				</div>
+				<div class="photoSlide">
+					<!-- 27 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/_XolYhdoPEWp8eR_kEwKs4ERjdF8wmCs_XMxj5V55vjAvXiDJXYSsHIYwGuGXeRcfudeHVGlgx56YlDo8KwJUXhMiCI0awHE26iMLlvDM9pPytzaDR4D9Ptgqw5xBkDIEGe7_w' />
 				</div>
 			</div>
 		</div>
