added \'more to come\' in projects

--- a/html/projects.html
+++ b/html/projects.html
@@ -53,7 +53,7 @@
 						--><div class="key blackKey" id="db3Key" onclick="contextualClick('db', 3, this.id)"><div class="hardwareName">2</div><div class="keyName">C<sup>#</sup> D<sup>b</sup></div></div><!--
 						--><div class="key cutKey" id="d3Key" onclick="contextualClick('d', 3, this.id)"><div class="hardwareName">w</div><div class="keyName">D</div></div><!--
 						--><div class="key blackKey" id="eb3Key" onclick="contextualClick('eb', 3, this.id)"><div class="hardwareName">3</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
-						--><div class="key rStraightKey" id="e3Key" onclick="contextualClick('e', 3, this.id)"><div class="hardwareName">e</div><div class="keyName">E</div></div><!--
+						--><div class="key rStraightKey" id="e3Key" onclick="contextualClick('e', 3, this.id)"><div class=" hardwareName">e</div><div class="keyName">E</div></div><!--
 						--><div class="key lStraightKey" id="f3Key" onclick="contextualClick('f', 3, this.id)"><div class="hardwareName">r</div><div class="keyName">F</div></div><!--
 						--><div class="key blackKey" id="gb3Key" onclick="contextualClick('gb', 3, this.id)"><div class="hardwareName">5</div><div class="keyName">F<sup>#</sup> G<sup>b</sup></div></div><!--
 						--><div class="key cutKey" id="g3Key" onclick="contextualClick('g', 3, this.id)"><div class="hardwareName">t</div><div class="keyName">G</div></div><!--
@@ -130,6 +130,9 @@
 					</div>
 				</div>
 			</div>
+		<div class="col-12 col-m-12 showcase">
+			<h1>More to come...</h1>
+		</div>
 		</div>
 	</body>
 </html>
